Landscape adjust InstrucoesActivity

--- a/app/src/main/res/layout/fragment_jogo.xml
+++ b/app/src/main/res/layout/fragment_jogo.xml
@@ -13,7 +13,8 @@
         android:layout_marginLeft="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="8dp"
-        app:cardBackgroundColor="#FA8072"
+        android:layout_marginStart="3dp"
+        app:cardBackgroundColor="@color/jogoBackground"
         app:cardCornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
