--- a/app/src/main/res/drawable/button_radius.xml
+++ b/app/src/main/res/drawable/button_radius.xml
@@ -7,10 +7,10 @@
         android:color="#FFFFFF" />
     <solid android:color="#FA8072"/>
 
-    // The desired corner radius. reduce it to keep it less rounded
+    <!--// The desired corner/ radius. reduce it to keep it less rounded-->
     <corners android:radius="360dp" />
 
-    // Add your desired padding
+    <!--// Add your desired padding-->
     <padding
         android:left="20dp"
         android:top="10dp"
