--- a/app/src/main/res/layout/fragment_teclado.xml
+++ b/app/src/main/res/layout/fragment_teclado.xml
@@ -5,54 +5,60 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:context=".fragment.TecladoAlfabeticoFragment"
-    android:background="#fffd82">
+    android:background="@color/background"
+    >
 
 
     <Button
         android:id="@+id/buttonA"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="A"
+        android:background="@drawable/custom_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonT"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="T"
+        android:background="@drawable/custom_button"
         app:layout_constraintStart_toEndOf="@+id/buttonS"
         app:layout_constraintTop_toBottomOf="@+id/buttonM" />
 
     <Button
         android:id="@+id/buttonI"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="I"
-        app:layout_constraintStart_toEndOf="@+id/buttonH"
-        app:layout_constraintTop_toBottomOf="@+id/buttonC" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonA" />
 
     <Button
         android:id="@+id/buttonO"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:padding="1dp"
         android:text="O"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonI" />
+        app:layout_constraintStart_toEndOf="@+id/buttonN"
+        app:layout_constraintTop_toBottomOf="@+id/buttonG" />
 
     <Button
         android:id="@+id/buttonM"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:background="@drawable/custom_button"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="M"
@@ -61,18 +67,20 @@
 
     <Button
         android:id="@+id/buttonH"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="H"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonA" />
+        app:layout_constraintStart_toEndOf="@+id/buttonG"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonK"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:background="@drawable/custom_button"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="K"
@@ -81,19 +89,21 @@
 
     <Button
         android:id="@+id/buttonJ"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:padding="4dp"
         android:text="J"
         app:layout_constraintStart_toEndOf="@+id/buttonI"
-        app:layout_constraintTop_toBottomOf="@+id/buttonD" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonB" />
 
     <Button
         android:id="@+id/buttonG"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:background="@drawable/custom_button"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="G"
@@ -102,40 +112,43 @@
 
     <Button
         android:id="@+id/buttonP"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="P"
         app:layout_constraintStart_toEndOf="@+id/buttonO"
-        app:layout_constraintTop_toBottomOf="@+id/buttonJ" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonH" />
 
     <Button
         android:id="@+id/buttonV"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="56dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="V"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonP" />
+        app:layout_constraintStart_toEndOf="@+id/buttonU"
+        app:layout_constraintTop_toBottomOf="@+id/buttonN" />
 
     <Button
         android:id="@+id/buttonQ"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:padding="1dp"
         android:text="Q"
-        app:layout_constraintStart_toEndOf="@+id/buttonP"
-        app:layout_constraintTop_toBottomOf="@+id/buttonK" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonI" />
 
     <Button
         android:id="@+id/buttonL"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:background="@drawable/custom_button"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="L"
@@ -144,94 +157,98 @@
 
     <Button
         android:id="@+id/buttonS"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="200dp"
-
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="S"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonM" />
+        app:layout_constraintStart_toEndOf="@+id/buttonR"
+        app:layout_constraintTop_toBottomOf="@+id/buttonK" />
 
     <Button
         android:id="@+id/buttonW"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="W"
         app:layout_constraintStart_toEndOf="@+id/buttonV"
-        app:layout_constraintTop_toBottomOf="@+id/buttonQ" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonO" />
 
     <Button
         android:id="@+id/buttonY"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="204dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="168dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="Y"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonS" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonT" />
 
     <Button
         android:id="@+id/buttonX"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="X"
         app:layout_constraintStart_toEndOf="@+id/buttonW"
-        app:layout_constraintTop_toBottomOf="@+id/buttonR" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonP" />
 
     <Button
         android:id="@+id/buttonE"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="E"
+        android:background="@drawable/custom_button"
         app:layout_constraintStart_toEndOf="@+id/buttonD"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonF"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="F"
+        android:background="@drawable/custom_button"
         app:layout_constraintStart_toEndOf="@+id/buttonE"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonD"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="D"
+        android:background="@drawable/custom_button"
         app:layout_constraintStart_toEndOf="@+id/buttonC"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonZ"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="Z"
         app:layout_constraintStart_toEndOf="@+id/buttonY"
-        app:layout_constraintTop_toBottomOf="@+id/buttonT" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonU" />
 
     <Button
         android:id="@+id/buttonU"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="U"
@@ -240,39 +257,42 @@
 
     <Button
         android:id="@+id/buttonC"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="C"
+        android:background="@drawable/custom_button"
         app:layout_constraintStart_toEndOf="@+id/buttonB"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonN"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="N"
+        android:background="@drawable/custom_button"
         app:layout_constraintStart_toEndOf="@+id/buttonM"
         app:layout_constraintTop_toBottomOf="@+id/buttonG" />
 
     <Button
         android:id="@+id/buttonR"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/custom_button"
         android:clickable="true"
         android:onClick="getClick"
         android:text="R"
         app:layout_constraintStart_toEndOf="@+id/buttonQ"
-        app:layout_constraintTop_toBottomOf="@+id/buttonL" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonJ" />
 
     <Button
         android:id="@+id/buttonB"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:background="@drawable/custom_button"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:clickable="true"
         android:onClick="getClick"
         android:text="B"
