--- a/app/src/main/res/drawable/button_radius.xml
+++ b/app/src/main/res/drawable/button_radius.xml
@@ -5,7 +5,14 @@
     <stroke
         android:width="4dp"
         android:color="#FFFFFF" />
-    <solid android:color="#FA8072"/>
+    <!--<solid android:color="#FA8072"/>-->
+    <!--<solid android:color=""/>-->
+    <gradient
+        android:angle="45"
+        android:endColor="#71CC77"
+        android:startColor="#C0FFAD"
+        android:type="linear" />
+
 
     <!--// The desired corner/ radius. reduce it to keep it less rounded-->
     <corners android:radius="360dp" />
