--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -77,8 +77,7 @@
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout="@layout/fragment_life"
-           ></fragment>
+            tools:layout="@layout/fragment_life" />
 
     </androidx.appcompat.widget.ContentFrameLayout>
 
