--- a/app/src/main/res/layout/activity_recordes.xml
+++ b/app/src/main/res/layout/activity_recordes.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/layout"
     tools:context=".activity.RecordesActivity"
-    android:background="#fffd82">
+    android:background="@color/background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_usuarios"
