--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.RegistrarActivity"
-    android:background="#fffd82">
+    android:background="@color/background">
 
 
     <TextView
@@ -35,17 +35,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="216dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/button_radius"
         android:text="Salvar"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.022"
         app:layout_constraintStart_toEndOf="@+id/teclado"
-        app:layout_constraintTop_toBottomOf="@+id/jo"
-        app:layout_constraintVertical_bias="0.448" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/botao_limpar_recordes"
@@ -59,10 +56,10 @@
         android:text="Limpar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.178"
+        app:layout_constraintHorizontal_bias="0.391"
         app:layout_constraintStart_toEndOf="@+id/teclado"
         app:layout_constraintTop_toBottomOf="@+id/botao_salvar"
-        app:layout_constraintVertical_bias="0.452" />
+        app:layout_constraintVertical_bias="0.285" />
 
     <TextView
         android:id="@+id/mensagem_final"
@@ -87,7 +84,7 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout="@layout/fragment_teclado"></fragment>
+        tools:layout="@layout/fragment_teclado" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
