--- a/app/src/main/res/layout/activity_segunda_chance.xml
+++ b/app/src/main/res/layout/activity_segunda_chance.xml
@@ -5,78 +5,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.SegundaChanceActivity"
-    android:background="#fffd82">
-
-    <Button
-        android:id="@+id/palavra1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="88dp"
-        android:background="@drawable/button_radius"
-        android:onClick="getPalavraEscolhida"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="palavra 4" />
-
-    <Button
-        android:id="@+id/palavra2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/button_radius"
-        android:onClick="getPalavraEscolhida"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/palavra3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:text="palavra 1" />
-
-    <Button
-        android:id="@+id/palavra3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="88dp"
-        android:background="@drawable/button_radius"
-        android:onClick="getPalavraEscolhida"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/palavra1"
-        app:layout_constraintHorizontal_bias="0.313"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="palavra 3" />
-
-    <Button
-        android:id="@+id/palavra4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/button_radius"
-        android:onClick="getPalavraEscolhida"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/palavra1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:text="palavra 2" />
+    android:background="@color/background">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/mensagem_segunda_chance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="QUE TAL UMA SEGUNDA CHANCE? VOCÊ SÓ PRECISA ESCOLHER A PALAVRA QUE VOCÊ ERROU!"
+        android:text="@string/frase_segunda_chance"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="30dp"
+        android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <fragment
+        android:id="@+id/teclado"
+        android:name="com.palavras.unicap.palavrinhas.fragment.TecladoAlfabeticoFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/palavra_usuario_segunda_chance"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout="@layout/fragment_teclado" />
+
+    <TextView
+        android:id="@+id/palavra_correta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text=""
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mensagem_segunda_chance"
+        tools:text="PALAVRA" />
+
+    <TextView
+        android:id="@+id/palavra_usuario_segunda_chance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text=""
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/palavra_correta"
+        tools:text="PALAVRA 2" />
+
+    <Button
+        android:id="@+id/botao_confirmar_segunda_chance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/button_radius"
+        android:text="Confirmar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/teclado"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/botao_limpar_segunda_chance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/button_radius"
+        android:text="Limpar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toEndOf="@+id/teclado"
+        app:layout_constraintTop_toBottomOf="@+id/botao_confirmar_segunda_chance"
+        app:layout_constraintVertical_bias="0.189" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
