--- a/app/src/main/res/layout/activity_instrucoes.xml
+++ b/app/src/main/res/layout/activity_instrucoes.xml
@@ -3,7 +3,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.InstrucoesActivity"
-    android:background="#fffd82">
+    android:background="@color/background">
+
+    <ImageView
+        android:id="@+id/botao_voltar_image"
+        android:layout_width="62dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_rew"
+        android:contentDescription="botao back" />
+
+    <ImageView
+        android:id="@+id/botao_next_image"
+        android:layout_width="62dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_ff"
+        android:contentDescription="Botao next" />
+
+    <ImageView
+        android:id="@+id/image_tutorial"
+        android:layout_width="match_parent"
+        android:layout_height="306dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="imagem"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/botao_next_image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/image_instruction" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
