--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -89,6 +89,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="180dp"
         android:text="TECLADO"
+        android:onClick="switchTeclado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tela_jogo" />
 
