--- a/app/src/main/res/layout/activity_segunda_chance.xml
+++ b/app/src/main/res/layout/activity_segunda_chance.xml
@@ -8,17 +8,22 @@
     android:background="@color/background">
 
 
-    <fragment
-        android:id="@+id/teclado"
-        android:name="com.palavras.unicap.palavrinhas.fragment.TecladoAlfabeticoFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
+    <androidx.appcompat.widget.ContentFrameLayout
+        android:id="@+id/teclado_jogo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:tag="teclado_fragment"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".5"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/life_jogo"
+        app:layout_constraintVertical_bias="0.058"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".5"
         tools:layout="@layout/fragment_teclado" />
 
     <TextView
