--- a/app/src/main/res/layout/activity_jogo.xml
+++ b/app/src/main/res/layout/activity_jogo.xml
@@ -12,43 +12,37 @@
     <androidx.appcompat.widget.ContentFrameLayout
         android:name="com.palavras.unicap.palavrinhas.fragment.JogoFragment"
         android:id="@+id/tela_jogo"
-        android:layout_width="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
-        android:layout_height="wrap_content"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".9"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".38"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         tools:layout="@layout/fragment_jogo">
-
-        <!--<fragment-->
-            <!--android:name="com.palavras.unicap.palavrinhas.fragment.JogoFragment"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/cardView"-->
-            <!--app:layout_constraintVertical_bias="1.0"-->
-            <!--tools:layout="@layout/fragment_jogo"></fragment>-->
     </androidx.appcompat.widget.ContentFrameLayout>
 
     <androidx.appcompat.widget.ContentFrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:id="@+id/teclado_jogo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:tag="teclado_fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".5"
+        app:layout_constraintHorizontal_bias="0.57"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/life_jogo"
-        tools:layout="@layout/fragment_teclado"
-        android:id="@+id/teclado_jogo">
-
-    </androidx.appcompat.widget.ContentFrameLayout>
+        app:layout_constraintVertical_bias="0.058"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".7"
+        tools:layout="@layout/fragment_teclado" />
 
     <ImageView
         android:id="@+id/botao_voltar"
