--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -7,18 +7,77 @@
     tools:context=".activity.RegistrarActivity"
     android:background="@color/background">
 
+
+    <TextView
+        android:id="@+id/jo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="276dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/digite_seu_nome"
+        android:textSize="32sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pontuacao" />
+
+    <TextView
+        android:id="@+id/nome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:text=""
+        android:textSize="32sp"
+        app:layout_constraintStart_toEndOf="@+id/jo"
+        app:layout_constraintTop_toBottomOf="@+id/pontuacao"
+        tools:text="FELIPE" />
+
     <Button
-        android:id="@+id/botao_finalizar"
+        android:id="@+id/botao_salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="212dp"
-        android:layout_marginEnd="364dp"
+        android:layout_marginEnd="156dp"
         android:background="@drawable/button_radius"
-        android:text="@string/Finalizar"
+        android:text="@string/salvar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/teclado"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/botao_limpar_recordes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_radius"
+        android:text="@string/limpar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/teclado"
+        app:layout_constraintTop_toBottomOf="@+id/botao_salvar"
+        app:layout_constraintVertical_bias="0.137" />
+
+    <androidx.appcompat.widget.ContentFrameLayout
+        android:id="@+id/teclado"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:tag="teclado_fragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".5"
+        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/life_jogo"
+        app:layout_constraintVertical_bias="0.058"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".5"
+        tools:layout="@layout/fragment_teclado" />
 
     <ImageView
         android:id="@+id/teclado_image"
@@ -31,23 +90,13 @@
         />
 
     <TextView
-        android:id="@+id/pontuacao_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="64dp"
-        android:textSize="32sp"
-        app:layout_constraintStart_toEndOf="@+id/teclado_image"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Pontuação:" />
-
-    <TextView
         android:id="@+id/pontuacao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="56dp"
         android:textSize="32sp"
-        app:layout_constraintStart_toEndOf="@+id/pontuacao_text"
+        app:layout_constraintStart_toEndOf="@+id/teclado_image"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="50 pontos" />
 
